add speaker: Yan Tishko

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -502,8 +502,8 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">10:20</span><a href="speakers/nikita-sidorov.html"> Don’t (re)write code. Let
-            AST do it</a></h3>
+          <h3><span class="schedule-time">10:20</span><a href="speakers/nikita-sidorov.html"> Server side rendering,
+            глаза боятся, а руки делают</a></h3>
           <p class="text-sm">Никита Сидоров
             <small>| Yandex</small>
           </p>
@@ -512,7 +512,14 @@
           </p>
         </li>
         <li class="third-stream">
-
+          <h3><span class="schedule-time">10:20</span><a href="speakers/yan-tishko.html"> Don’t (re)write code. Let
+            AST do it</a></h3>
+          <p class="text-sm">Yan Tishko
+            <small>| Oxagile</small>
+          </p>
+          <p class="text-sm">30min | EN
+            <span class="talk-place">Blue Stage</span>
+          </p>
         </li>
 
         <li class="first-stream">
@@ -675,20 +682,22 @@
             <small>| DAZN</small>
           </p>
           <p class="text-sm">30min | EN
-            <span class="talk-place">Green Stage</span>
+            <span class="talk-place">Red Stage</span>
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">17:00</span><a href="speakers/itbeard.html">Engineer: Hard Skills vs Soft Skills.</a></h3>
+          <h3><span class="schedule-time">17:00</span><a href="speakers/itbeard.html">Engineer: Hard Skills vs Soft
+            Skills.</a></h3>
           <p class="text-sm">Лекс АйТиБорода
             <small>| АйТиБорода</small>
           </p>
           <p class="text-sm">50min | RU
-            <span class="talk-place">Blue Stage</span>
+            <span class="talk-place">Green Stage</span>
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">11:00</span><a href="speakers/vladimir-panteleev.html">Черная книга скрам</a></h3>
+          <h3><span class="schedule-time">11:00</span><a href="speakers/vladimir-panteleev.html">Черная книга скрам</a>
+          </h3>
           <p class="text-sm">Vladimir Panteleev
           </p>
           <p class="text-sm">40min | RU
