--- a/app/speakers.html
+++ b/app/speakers.html
@@ -321,18 +321,18 @@
           </figure>
         </li>
 
-<!--        <li>-->
-<!--          <figure>-->
-<!--            <img src="images/speakers/sergey-shalyapin.jpg" alt="Sergey Shalyapin photo">-->
-<!--            <figcaption>-->
-<!--              <span class="speaker-company">Oxagile</span>-->
-<!--              <h3><a href="speakers/sergey-shalyapin.html">Sergey Shalyapin</a></h3>-->
-<!--              <p>-->
-<!--                <small> Minsk, Belarus</small>-->
-<!--              </p>-->
-<!--            </figcaption>-->
-<!--          </figure>-->
-<!--        </li>-->
+        <li>
+          <figure>
+            <img src="images/speakers/yan-tishko.jpg" alt="Yan Tishko photo">
+            <figcaption>
+              <span class="speaker-company">Oxagile</span>
+              <h3><a href="speakers/yan-tishko.html">Yan Tishko</a></h3>
+              <p>
+                <small> Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
 
         <li>
           <figure>
