fix; talk title, active day in schedule

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -512,8 +512,8 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">10:20</span><a href="speakers/yan-tishko.html"> Don’t (re)write code. Let
-            AST do it</a></h3>
+          <h3><span class="schedule-time">10:20</span><a href="speakers/yan-tishko.html"> Server side rendering, глаза
+            боятся, а руки делают</a></h3>
           <p class="text-sm">Yan Tishko
             <small>| Oxagile</small>
           </p>
