upd: info about panteleev & tsishko

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -323,10 +323,10 @@
 
         <li>
           <figure>
-            <img src="images/speakers/yan-tishko.jpg" alt="Yan Tishko photo">
+            <img src="images/speakers/yan-tsishko.jpg" alt="Yan Tsishko photo">
             <figcaption>
               <span class="speaker-company">Oxagile</span>
-              <h3><a href="speakers/yan-tishko.html">Yan Tishko</a></h3>
+              <h3><a href="speakers/yan-tsishko.html">Yan Tsishko</a></h3>
               <p>
                 <small> Minsk, Belarus</small>
               </p>
@@ -867,7 +867,6 @@
           <figure>
             <img src="images/speakers/vladimir-panteleev.jpg" alt="Vladimir Panteleev photo">
             <figcaption>
-              <span class="speaker-company">Paralect</span>
               <h3><a href="speakers/vladimir-panteleev.html">Vladimir Panteleev</a></h3>
               <p>
                 <small>Minsk, Belarus</small>
