--- a/app/schedule.html
+++ b/app/schedule.html
@@ -512,12 +512,12 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">10:20</span><a href="speakers/yan-tishko.html"> Server side rendering, глаза
+          <h3><span class="schedule-time">10:20</span><a href="speakers/yan-tsishko.html"> Server side rendering, глаза
             боятся, а руки делают</a></h3>
-          <p class="text-sm">Yan Tishko
+          <p class="text-sm">Yan Tsishko
             <small>| Oxagile</small>
           </p>
-          <p class="text-sm">30min | EN
+          <p class="text-sm">40min | RU
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
