fix sidorov talk

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -502,8 +502,7 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">10:20</span><a href="speakers/nikita-sidorov.html"> Server side rendering,
-            глаза боятся, а руки делают</a></h3>
+          <h3><span class="schedule-time">10:20</span><a href="speakers/nikita-sidorov.html">Don’t (re)write code. Let AST do it</a></h3>
           <p class="text-sm">Никита Сидоров
             <small>| Yandex</small>
           </p>
