add video link on korolev's talk

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -1006,8 +1006,8 @@
 
         <li class="first-stream">
           <h3><span class="schedule-time">16:00</span><a href="speakers/dima-korolev.html">Через тернии к ATM</a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <a class="youtube-link" title="Watch on YouTube" target="_blank"
+               href="https://youtu.be/o2exQHyRZdA"><small> <i class="fab fa-youtube-square"></i></small></a>
           </h3>
           <p class="text-sm">Дима Королёв
             <small>| Tinkoff</small>
