add links to video talks

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -351,8 +351,8 @@
         <li class="first-stream">
           <h3><span class="schedule-time">17:00</span><a href="speakers/yonatan-levin.html">Modern Android Development
             in Production</a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
+            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
           </h3>
           <p class="text-sm">Yonatan Levin
             <small>| monday.com</small>
@@ -446,8 +446,8 @@
 
         <li>
           <h3><span class="schedule-time">14:00</span><a href="speakers/pavel-kedich.html">Другой веб</a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
+            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
           </h3>
           <p class="text-sm">Pavel Kedich
             <small>| Readymag</small>
@@ -568,8 +568,8 @@
         <li class="third-stream">
           <h3><span class="schedule-time">10:20</span><a href="speakers/yan-tsishko.html"> Server side rendering, глаза
             боятся, а руки делают</a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <a class="youtube-link" title="Watch on YouTube" target="_blank"
+               href="https://youtu.be/eenX8EGkTZM"><small> <i class="fab fa-youtube-square"></i></small></a>
           </h3>
           <p class="text-sm">Yan Tsishko
             <small>| Oxagile</small>
@@ -729,8 +729,8 @@
         <li class="third-stream">
           <h3><span class="schedule-time">15:00</span><a href="speakers/anton-bely.html">Angular + Redux ... stop,
             what?</a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <a class="youtube-link" title="Watch on YouTube" target="_blank"
+               href="https://youtu.be/AduwO3GnN6o"><small> <i class="fab fa-youtube-square"></i></small></a>
           </h3>
           <p class="text-sm">Anton Bely
             <small>| Yandex</small>
@@ -791,7 +791,8 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">17:00</span><a href="speakers/leks-itboroda.html">Engineer: Hard Skills vs Soft
+          <h3><span class="schedule-time">17:00</span><a href="speakers/leks-itboroda.html">Engineer: Hard Skills vs
+            Soft
             Skills.</a>
             <a class="youtube-link" title="Watch on YouTube" target="_blank"
                href="https://youtu.be/Vt60EHkEYR4"><small> <i class="fab fa-youtube-square"></i></small></a>
@@ -899,8 +900,8 @@
         <li class="second-stream">
           <h3><span class="schedule-time">12:00</span><a href="speakers/artem-kunets.html"> Трассируем лучи в реальном
             времени</a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
+            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
           </h3>
           <p class="text-sm">Artem Kunets
             <small>| Align Technology</small>
@@ -912,8 +913,8 @@
         <li class="third-stream">
           <h3><span class="schedule-time">12:00</span><a href="speakers/maksim-yuzva.html">Панельная дискуссия: Гайд по
             front-end разработчику, патч 2019</a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
+            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
           </h3>
           <p class="text-sm">Moderator: Maksim Yuzva
           </p>
@@ -938,8 +939,8 @@
         <li class="second-stream">
           <h3><span class="schedule-time">13:00</span><a href="speakers/pablo-birukov.html"> JavaScript that scales
           </a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
+            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
           </h3>
           <p class="text-sm">Pablo Birukov
             <small>| Evolution Gaming</small>
@@ -951,8 +952,8 @@
         <li class="third-stream">
           <h3><span class="schedule-time">13:00</span><a href="speakers/maksim-yuzva.html">Панельная дискуссия: Гайд по
             front-end разработчику, патч 2019</a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
+            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
           </h3>
           <p class="text-sm">Moderator: Maksim Yuzva
           </p>
@@ -981,8 +982,8 @@
         <li class="second-stream">
           <h3><span class="schedule-time">15:00</span><a href="speakers/artur-kenzhaev.html"> The Quest of the Styling
             Grail</a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <a class="youtube-link" title="Watch on YouTube" target="_blank"
+               href="https://youtu.be/yuzlY7GHh40"><small> <i class="fab fa-youtube-square"></i></small></a>
           </h3>
           <p class="text-sm">Artur Kenzhaev
             <small>| Yandex.Market</small>
@@ -993,8 +994,8 @@
         </li>
         <li class="third-stream">
           <h3><span class="schedule-time">15:00</span><a href="speakers/yan-ageenko.html">Дизайн-система на HTML/CSS</a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
+            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
           </h3>
           <p class="text-sm">Yan Ageenko
             <small>| IT-Academy</small>
@@ -1019,8 +1020,8 @@
         <li class="second-stream">
           <h3><span class="schedule-time">16:00</span><a href="speakers/ekaterina-prigara.html">Как мы создаем
             WebStorm</a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
+            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
           </h3>
           <p class="text-sm">Ekaterina Prigara
             <small>| JetBrains</small>
@@ -1032,8 +1033,8 @@
         <li class="third-stream">
           <h3><span class="schedule-time">16:00</span><a href="speakers/maksim-yuzva.html">Воркшоп. Часть 1: Строим PDP
             на основе гайдa по front-end разработчику</a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
+            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
           </h3>
           <p class="text-sm">Maksim Yuzva
             <small>| EPAM</small>
@@ -1046,8 +1047,8 @@
         <li class="first-stream">
           <h3><span class="schedule-time">17:00</span><a href="speakers/kirill-knysh.html">Convert your React
             application to API</a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <a class="youtube-link" title="Watch on YouTube" target="_blank"
+               href="https://youtu.be/bIfboQpgULg"><small> <i class="fab fa-youtube-square"></i></small></a>
           </h3>
           <p class="text-sm">Kirill Knysh
             <small>| Uber</small>
@@ -1059,8 +1060,8 @@
         <li class="second-stream">
           <h3><span class="schedule-time">17:00</span><a href="speakers/alexander-korotaev.html">Теплый ламповый геймдев
             на React и WebGL</a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
+            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
           </h3>
           <p class="text-sm">Alexander Korotaev
             <small>| Tinkoff</small>
@@ -1072,8 +1073,8 @@
         <li class="third-stream">
           <h3><span class="schedule-time">17:00</span> <a href="speakers/maksim-yuzva.html">Воркшоп. Часть 2: Строим PDP
             на основе гайдa по front-end разработчику</a>
-<!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-<!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
+            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
           </h3>
           <p class="text-sm">Maksim Yuzva
             <small>| EPAM</small>
