add links to video talks

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -900,8 +900,8 @@
         <li class="second-stream">
           <h3><span class="schedule-time">12:00</span><a href="speakers/artem-kunets.html"> Трассируем лучи в реальном
             времени</a>
-            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <a class="youtube-link" title="Watch on YouTube" target="_blank"
+               href="https://youtu.be/mGdjfQnwU7c"><small> <i class="fab fa-youtube-square"></i></small></a>
           </h3>
           <p class="text-sm">Artem Kunets
             <small>| Align Technology</small>
@@ -913,8 +913,8 @@
         <li class="third-stream">
           <h3><span class="schedule-time">12:00</span><a href="speakers/maksim-yuzva.html">Панельная дискуссия: Гайд по
             front-end разработчику, патч 2019</a>
-            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <a class="youtube-link" title="Watch on YouTube" target="_blank"
+               href="https://youtu.be/y2fHkGk2V78"><small> <i class="fab fa-youtube-square"></i></small></a>
           </h3>
           <p class="text-sm">Moderator: Maksim Yuzva
           </p>
@@ -994,8 +994,8 @@
         </li>
         <li class="third-stream">
           <h3><span class="schedule-time">15:00</span><a href="speakers/yan-ageenko.html">Дизайн-система на HTML/CSS</a>
-            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <a class="youtube-link" title="Watch on YouTube" target="_blank"
+               href="https://youtu.be/srHkTsBldUo"><small> <i class="fab fa-youtube-square"></i></small></a>
           </h3>
           <p class="text-sm">Yan Ageenko
             <small>| IT-Academy</small>
