add links to video talks

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -939,8 +939,8 @@
         <li class="second-stream">
           <h3><span class="schedule-time">13:00</span><a href="speakers/pablo-birukov.html"> JavaScript that scales
           </a>
-            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <a class="youtube-link" title="Watch on YouTube" target="_blank"
+               href="https://youtu.be/Q8-aOtRf6ac"><small> <i class="fab fa-youtube-square"></i></small></a>
           </h3>
           <p class="text-sm">Pablo Birukov
             <small>| Evolution Gaming</small>
@@ -1020,8 +1020,8 @@
         <li class="second-stream">
           <h3><span class="schedule-time">16:00</span><a href="speakers/ekaterina-prigara.html">Как мы создаем
             WebStorm</a>
-            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <a class="youtube-link" title="Watch on YouTube" target="_blank"
+               href="https://youtu.be/vWA9-ZG4xyM"><small> <i class="fab fa-youtube-square"></i></small></a>
           </h3>
           <p class="text-sm">Ekaterina Prigara
             <small>| JetBrains</small>
@@ -1060,8 +1060,8 @@
         <li class="second-stream">
           <h3><span class="schedule-time">17:00</span><a href="speakers/alexander-korotaev.html">Теплый ламповый геймдев
             на React и WebGL</a>
-            <!--            <a class="youtube-link" title="Watch on YouTube" target="_blank"-->
-            <!--               href=""><small> <i class="fab fa-youtube-square"></i></small></a>-->
+            <a class="youtube-link" title="Watch on YouTube" target="_blank"
+               href="https://youtu.be/0IokvBSGixc"><small> <i class="fab fa-youtube-square"></i></small></a>
           </h3>
           <p class="text-sm">Alexander Korotaev
             <small>| Tinkoff</small>
