fix ivanov's video link

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -170,7 +170,7 @@
         <li>
           <h3><span class="schedule-time">10:10</span> <a href="speakers/vladimir-ivanov.html"> Wake Up, Neo</a>
             <a class="youtube-link" title="Watch on YouTube" target="_blank"
-               href="https://www.youtube.com/embed/4AWHbS5hWJw"><small> <i
+               href="https://youtu.be/4AWHbS5hWJw"><small> <i
               class="fab fa-youtube-square"></i></small></a>
           </h3>
           <p class="text-sm">Vladimir Ivanov
